[package]
name = "atomicdouble"
version = "0.1.1"
authors = ["Abishek <abishek0398@gmail.com>"]
edition = "2018"
description = "128-bit atomics for generic type"
documentation = "https://docs.rs/atomicdouble"
license = "Apache-2.0/MIT"
repository = "https://github.com/Abishek0398/AtomicDouble.git"
readme = "README.md"
keywords = ["atomic","128-bit-atomics"]

[features]
default = ["fallback"]
fallback = []